<resources>
    <string name="app_name">Foodie Zone</string>
    <string name="login">Login</string>
    <string name="enter_your_mobile_number">Enter your mobile number</string>
    <string name="enter_password">Enter Password</string>
    <string name="don_t_have_an_account_sign_up_now">Don\'t have an account? Sign up now</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="foodie_zone">Foodie Zone</string>
    <string name="register_yourself">Register Yourself</string>
    <string name="name_min_3_characters">Name(Min.3 characters)</string>
    <string name="email_address">Email Address</string>
    <string name="mobile_number_10_digits">Mobile Number(10 digits)</string>
    <string name="delivery_address">Delivery Address</string>
    <string name="create_password_min_4_characters">Create Password(Min.4 characters)</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="enter_your_registered_mobile_number_and_email_below">Enter your registered mobile number and email below</string>
    <string name="next">Next</string>
    <string name="submit">Submit</string>
    <string name="new_password_min_4_characters">New Password(Min.4 characters)</string>
    <string name="otp_4_characters">OTP(4 characters)</string>
    <string name="home">Home</string>
    <string name="my_profile">My Profile</string>
    <string name="favourite_restaurants">Favourite Restaurants</string>
    <string name="order_history">Order History</string>
    <string name="faqs">FAQs</string>
    <string name="log_out">Log Out</string>
    <string name="navigation_drawer">Navigation Drawer</string>
    <string name="open_drawer">Open Drawer</string>
    <string name="close_drawer">Close Drawer</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="register">Register</string>
    <string name="what_exactly_is_a_foodiezone">What exactly is a FoodieZone?</string>
    <string name="q_1_what_exactly_is_foodie_zone">Q.1 What exactly is Foodie Zone?</string>
    <string name="foodie_zone_provides_an_online_platform_for_ordering_from_a_wide_range_of_listed_neighbourhood_partner_restaurants_and_have_their_own_fleet_of_delivery_personnel_who_pick_up_the_orders_from_the_partner_restaurants_and_deliver_it_to_the_customers_at_their_doorsteps">Foodie Zone provides an online platform for ordering from a wide range of listed neighbourhood partner restaurants and have their own fleet of delivery personnel who pick up the orders from the partner restaurants and deliver it to the customers at their doorsteps.</string>
    <string name="q_1_can_i_place_order_on_call">Q.1 Can I place order on call?</string>
    <string name="sorry_we_don_t_accept_orders_on_call_however_you_can_call_us_on_our_helpline_for_any_help_related_to_placing_order">Sorry, we don’t accept orders on call. However you can call us on our helpline for any help related to placing order.</string>
    <string name="q_2_can_i_place_order_on_a_call">Q.2 Can i place order on a call?</string>
    <string name="q_3_how_do_i_edit_my_order_after_placing_it">Q.3 How do I edit my order after placing it?</string>
    <string name="q_3_how_do_i_know_my_order_is_confirmed">Q.3 How do I know my order is confirmed?</string>
    <string name="we_will_send_you_a_order_confirmation_email_once_we_receive_your_order">We will send you a order confirmation email once we receive your order.</string>
    <string name="q_4_how_do_i_cancel_my_order">Q.4 How do I cancel my order?</string>
    <string name="please_refer_to_our_return_cancellation_policy"><![CDATA[Please refer to our return & cancellation policy.]]></string>
    <string name="q_5_how_will_be_my_orders_delivered">Q.5 How will be my orders delivered?</string>
    <string name="orders_are_delivered_directly_by_the_swiggy_packaging_assist_suppliers_different_items_in_an_order_could_be_fulfilled_by_different_suppliers_we_will_share_the_contact_details_and_amount_payable_for_all_deliveries_via_email_and_sms">Orders are delivered directly by the Swiggy Packaging Assist suppliers. Different items in an order could be fulfilled by different suppliers. We will share the contact details and amount payable for all deliveries via email and SMS.</string>
    <string name="best_products_we_only_list_the_products_which_have_passed_our_tests_and_are_the_best_suitable_for_delivery_they_will_help_in_giving_a_better_consumer_experience_so_you_can_get_get_repeated_orders_best_prices_we_have_negotiated_rates_with_our_distributors_exclusive_for_swiggy_restaurant_convenience_no_need_to_haggle_for_prices_no_need_to_follow_up_on_delivery_we_track_all_orders_to_ensure_you_have_a_hassle_free_experience">Best products - We only list the products which have passed our tests and are the best suitable for delivery. They will help in giving a better consumer experience, so you can get get repeated orders. Best prices - We have negotiated rates with our distributors exclusive for Swiggy Restaurant. Convenience - No need to haggle for prices. No need to follow-up on delivery. We track all orders to ensure you have a hassle free experience.</string>
    <string name="q_9_will_i_get_an_invoice">Q.9 Will I get an invoice?</string>
    <string name="yes_you_will_get_your_invoice_from_our_supplier_at_the_time_of_delivery">Yes. You will get your invoice from our supplier at the time of delivery.</string>
    <string name="you_will_have_to_pay_at_the_time_of_delivery_as_per_the_payment_details_we_send_to_you_via_email">You will have to pay at the time of delivery as per the payment details we send to you via email.</string>
    <string name="q_8_when_i_have_to_pay">Q.8 When I have to pay?</string>
    <string name="q_7_will_i_get_my_entire_order_in_single_delivery">Q.7 Will I get my entire order in single delivery?</string>
    <string name="this_depends_on_the_items_you_have_ordered_we_have_partnered_with_different_suppliers_for_different_products_to_help_you_get_the_best_pricing">This depends on the items you have ordered. We have partnered with different suppliers for different products to help you get the best pricing.</string>
    <string name="we_are_currently_live_only_in_a_few_cities_we_will_be_expanding_soon">We are currently live only in a few cities. We will be expanding soon.</string>
    <string name="q_6_why_is_my_location_is_not_serviceable">Q.6 Why is my location is not serviceable?</string>
    <string name="q_10_how_are_you_guys_are_different">Q.10 How are you guys are different?</string>
    <string name="preference_file_name">Foodie preferences</string>
    <string name="name_of_restaurant">Name of restaurant</string>
    <string name="priceperperson">priceperperson</string>
    <string name="restaurantdetailsfragment">RestaurantDetailsFragment</string>
    <string name="name_of_item">Name of item</string>
    <string name="_100">100</string>
    <string name="add">Add</string>
    <string name="minimum_6_characters">Minimum 6 characters</string>
    <string name="new_password_min_6_characters">New Password(Min. 6 characters)</string>
    <string name="favourites_fragment">Favourites fragment</string>
</resources>