<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="fragment.FAQsFragment"
    android:background="#fff">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="20dp">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/txtQues1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:textColor="@color/colorPrimaryDark"
                android:text="@string/q_1_what_exactly_is_foodie_zone" />
            <TextView
                android:id="@+id/txtAns1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/txtQues1"
                android:layout_marginTop="5dp"
                android:textStyle="bold"
                android:textColor="@color/grey2"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:textSize="18sp"
                android:text="@string/foodie_zone_provides_an_online_platform_for_ordering_from_a_wide_range_of_listed_neighbourhood_partner_restaurants_and_have_their_own_fleet_of_delivery_personnel_who_pick_up_the_orders_from_the_partner_restaurants_and_deliver_it_to_the_customers_at_their_doorsteps"/>
            <TextView
                android:id="@+id/txtQues2"
                android:layout_width="match_parent"
                android:layout_marginTop="20dp"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:layout_below="@+id/txtAns1"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:textStyle="bold"
                android:textColor="@color/colorPrimaryDark"
                android:text="@string/q_2_can_i_place_order_on_a_call" />
            <TextView
                android:id="@+id/txtAns2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/txtQues2"
                android:layout_marginTop="5dp"
                android:textStyle="bold"
                android:textColor="@color/grey2"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:textSize="18sp"
                android:text="@string/sorry_we_don_t_accept_orders_on_call_however_you_can_call_us_on_our_helpline_for_any_help_related_to_placing_order"/>
            <TextView
                android:id="@+id/txtQues3"
                android:layout_width="match_parent"
                android:layout_marginTop="20dp"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_below="@+id/txtAns2"
                android:textStyle="bold"
                android:textColor="@color/colorPrimaryDark"
                android:text="@string/q_3_how_do_i_know_my_order_is_confirmed" />
            <TextView
                android:id="@+id/txtAns3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/txtQues3"
                android:layout_marginTop="5dp"
                android:textStyle="bold"
                android:textColor="@color/grey2"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:textSize="18sp"
                android:text="@string/we_will_send_you_a_order_confirmation_email_once_we_receive_your_order"/>
            <TextView
                android:id="@+id/txtQues4"
                android:layout_width="match_parent"
                android:layout_marginTop="20dp"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:layout_below="@+id/txtAns3"
                android:textStyle="bold"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:textColor="@color/colorPrimaryDark"
                android:text="@string/q_4_how_do_i_cancel_my_order" />
            <TextView
                android:id="@+id/txtAns4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/txtQues4"
                android:layout_marginTop="5dp"
                android:textStyle="bold"
                android:textColor="@color/grey2"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:textSize="18sp"
                android:text="@string/please_refer_to_our_return_cancellation_policy"/>
            <TextView
                android:id="@+id/txtQues5"
                android:layout_width="match_parent"
                android:layout_marginTop="20dp"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:layout_below="@+id/txtAns4"
                android:textStyle="bold"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:textColor="@color/colorPrimaryDark"
                android:text="@string/q_5_how_will_be_my_orders_delivered" />
            <TextView
                android:id="@+id/txtAns5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/txtQues5"
                android:layout_marginTop="5dp"
                android:textStyle="bold"
                android:textColor="@color/grey2"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:textSize="18sp"
                android:text="@string/orders_are_delivered_directly_by_the_swiggy_packaging_assist_suppliers_different_items_in_an_order_could_be_fulfilled_by_different_suppliers_we_will_share_the_contact_details_and_amount_payable_for_all_deliveries_via_email_and_sms"/>
            <TextView
                android:id="@+id/txtQues6"
                android:layout_width="match_parent"
                android:layout_marginTop="20dp"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_below="@+id/txtAns5"
                android:textStyle="bold"
                android:textColor="@color/colorPrimaryDark"
                android:text="@string/q_6_why_is_my_location_is_not_serviceable" />
            <TextView
                android:id="@+id/txtAns6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/txtQues6"
                android:layout_marginTop="5dp"
                android:textStyle="bold"
                android:textColor="@color/grey2"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:textSize="18sp"
                android:text="@string/we_are_currently_live_only_in_a_few_cities_we_will_be_expanding_soon"/>
            <TextView
                android:id="@+id/txtQues7"
                android:layout_width="match_parent"
                android:layout_marginTop="20dp"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_below="@+id/txtAns6"
                android:textStyle="bold"
                android:textColor="@color/colorPrimaryDark"
                android:text="@string/q_7_will_i_get_my_entire_order_in_single_delivery"/>

            <TextView
                android:id="@+id/txtAns7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/txtQues7"
                android:layout_marginTop="5dp"
                android:textStyle="bold"
                android:textColor="@color/grey2"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:textSize="18sp"
                android:text="@string/this_depends_on_the_items_you_have_ordered_we_have_partnered_with_different_suppliers_for_different_products_to_help_you_get_the_best_pricing"/>
            <TextView
                android:id="@+id/txtQues8"
                android:layout_width="match_parent"
                android:layout_marginTop="20dp"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_below="@+id/txtAns7"
                android:textStyle="bold"
                android:textColor="@color/colorPrimaryDark"
                android:text="@string/q_8_when_i_have_to_pay" />
            <TextView
                android:id="@+id/txtAns8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/txtQues8"
                android:layout_marginTop="5dp"
                android:textStyle="bold"
                android:textColor="@color/grey2"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:textSize="18sp"
                android:text="@string/you_will_have_to_pay_at_the_time_of_delivery_as_per_the_payment_details_we_send_to_you_via_email"/>
            <TextView
                android:id="@+id/txtQues9"
                android:layout_width="match_parent"
                android:layout_marginTop="20dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:textSize="18sp"
                android:layout_below="@+id/txtAns8"
                android:textStyle="bold"
                android:textColor="@color/colorPrimaryDark"
                android:text="@string/q_9_will_i_get_an_invoice" />
            <TextView
                android:id="@+id/txtAns9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/txtQues9"
                android:layout_marginTop="5dp"
                android:textStyle="bold"
                android:textColor="@color/grey2"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:textSize="18sp"
                android:text="@string/yes_you_will_get_your_invoice_from_our_supplier_at_the_time_of_delivery"/>
            <TextView
                android:id="@+id/txtQues10"
                android:layout_width="match_parent"
                android:layout_marginTop="20dp"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_below="@+id/txtAns9"
                android:textStyle="bold"
                android:textColor="@color/colorPrimaryDark"
                android:text="@string/q_10_how_are_you_guys_are_different" />
            <TextView
                android:id="@+id/txtAns10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/txtQues10"
                android:layout_marginTop="5dp"
                android:textStyle="bold"
                android:textColor="@color/grey2"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:textSize="18sp"
                android:layout_marginBottom="20dp"
                android:text="@string/best_products_we_only_list_the_products_which_have_passed_our_tests_and_are_the_best_suitable_for_delivery_they_will_help_in_giving_a_better_consumer_experience_so_you_can_get_get_repeated_orders_best_prices_we_have_negotiated_rates_with_our_distributors_exclusive_for_swiggy_restaurant_convenience_no_need_to_haggle_for_prices_no_need_to_follow_up_on_delivery_we_track_all_orders_to_ensure_you_have_a_hassle_free_experience"/>

        </RelativeLayout>

    </ScrollView>





</RelativeLayout>