<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="activity.RegisterActivity"
    android:background="@color/colorPrimary">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:titleTextColor="#fff"
        app:title="Register Yourself"
        android:layout_marginStart="70dp"/>
    <EditText
        android:id="@+id/etName"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:textSize="18sp"
        android:background="#fff"
        android:hint="@string/name_min_3_characters"
        android:drawableStart="@drawable/ic_name"
        android:layout_below="@+id/toolbar"
        android:textColorHint="@color/grey2"
        android:textStyle="bold"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="50dp"/>
    <EditText
        android:id="@+id/etEmail"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="#fff"
        android:textSize="18sp"
        android:hint="@string/email_address"
        android:drawableStart="@drawable/ic_email"
        android:layout_below="@+id/etName"
        android:textColorHint="@color/grey2"
        android:textStyle="bold"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"/>
    <EditText
        android:id="@+id/etMobile"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:textSize="18sp"
        android:hint="@string/mobile_number_10_digits"
        android:background="#fff"
        android:drawableStart="@drawable/ic_mobile"
        android:layout_below="@id/etEmail"
        android:textColorHint="@color/grey2"
        android:textStyle="bold"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"/>
    <EditText
        android:id="@+id/etAddress"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:textSize="18sp"
        android:hint="@string/delivery_address"
        android:background="#fff"
        android:drawableStart="@drawable/ic_delivery"
        android:layout_below="@+id/etMobile"
        android:textColorHint="@color/grey2"
        android:textStyle="bold"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"/>
    <EditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:textSize="18sp"
        android:hint="@string/create_password_min_4_characters"
        android:background="#fff"
        android:drawableStart="@drawable/ic_passwordgrey"
        android:layout_below="@+id/etAddress"
        android:textColorHint="@color/grey2"
        android:textStyle="bold"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="10dp"/>
    <EditText
        android:id="@+id/etConfirmPassword"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:textSize="18sp"
        android:hint="@string/confirm_password"
        android:background="#fff"
        android:drawableStart="@drawable/ic_passwordgrey"
        android:layout_below="@+id/etPassword"
        android:textColorHint="@color/grey2"
        android:textStyle="bold"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"/>
    <Button
        android:id="@+id/btnRegister"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/colorPrimaryDark"
        android:textColor="#fff"
        android:textStyle="bold"
        android:textSize="20sp"
        android:text="@string/register"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_below="@+id/etConfirmPassword"
        android:layout_marginTop="20dp"/>

</RelativeLayout>