<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="activity.LoginActivity"
    android:background="@color/colorPrimary"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/imgSplashicon"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_alignParentTop="true"
        android:layout_marginStart="107dp"
        android:layout_marginTop="85dp"
        android:src="@drawable/splashicon" />
    <EditText
        android:id="@+id/etMobile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/imgSplashicon"
        android:inputType="phone"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:textColorHint="#ffffff"
        android:drawableStart="@drawable/ic_phone"
        android:hint="@string/enter_your_mobile_number"/>
    <EditText
        android:layout_marginRight="20dp"
        android:layout_height="wrap_content"
        android:textColorHint="#ffffff"
        android:layout_below="@+id/etMobile"
        android:hint="@string/enter_password"
        android:layout_width="match_parent"
        android:drawableStart="@drawable/ic_password"
        android:id="@+id/etPassword"
        android:inputType="textPassword"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
       />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etPassword"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:text="@string/login"
        android:textStyle="bold"
        android:textColor="#fff"
        android:background="@color/colorPrimaryDark"
        android:textSize="20sp"
        />
    <TextView
        android:id="@+id/txtForgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textSize="15sp"
        android:textColor="#ffffff"
        android:layout_marginTop="18dp"
       android:layout_centerHorizontal="true"
        android:layout_below="@id/btnLogin"
        android:text="@string/forgot_password"/>
    <TextView
        android:id="@+id/txtRegisterYourself"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:layout_marginBottom="10dp"
        android:textSize="18sp"
        android:textColor="#ffffff"
        android:layout_alignParentBottom="true"
       android:layout_centerHorizontal="true"
        android:text="@string/don_t_have_an_account_sign_up_now"/>



</RelativeLayout>