<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="activity.ForgotPassword"
    android:background="@color/colorPrimary">
    <ImageView
        android:id="@+id/imgSplashicon"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginLeft="130dp"
        android:layout_marginTop="100dp"
        android:src="@drawable/splashicon"/>
    <TextView
        android:id="@+id/txtRegisterYourself"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="18dp"
        android:layout_marginRight="18dp"
        android:layout_below="@+id/imgSplashicon"
        android:layout_marginTop="30dp"
        android:textStyle="bold"
        android:textColor="#fff"
        android:textSize="22sp"
        android:text="@string/enter_your_registered_mobile_number_and_email_below"
        />
    <EditText
        android:id="@+id/etMobile"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:hint="@string/mobile_number_10_digits"
        android:background="#fff"
        android:layout_below="@+id/txtRegisterYourself"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:textColorHint="@color/grey2"/>
    <EditText
        android:id="@+id/etEmail"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:hint="@string/email_address"
        android:layout_below="@+id/etMobile"
        android:background="#fff"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:textColorHint="@color/grey2"/>
    <Button
        android:id="@+id/btnNext"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/etEmail"
        android:layout_marginTop="20dp"
        android:text="@string/next"
        android:textSize="18sp"
        android:textColor="#fff"
        android:background="@color/colorPrimaryDark"/>


</RelativeLayout>