<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="activity.OtpConfirmation"
    android:background="@color/colorPrimary">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:title="Enter the recieved OTP here"
        app:titleTextColor="#fff"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="20dp"/>
    <EditText
        android:id="@+id/etOTP"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:textSize="18sp"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="#fff"
        android:hint="@string/otp_4_characters"
        android:layout_below="@+id/toolbar"
        android:textColorHint="@color/grey2"
        android:textStyle="bold"/>
    <EditText
        android:id="@+id/etNewPassword"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:textSize="18sp"
        android:hint="@string/new_password_min_6_characters"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_below="@+id/etOTP"
        android:background="#fff"
        android:textColorHint="@color/grey2"
        android:textStyle="bold"/>
    <EditText
        android:id="@+id/etConfirmPassword"
        android:layout_width="match_parent"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_height="50dp"
        android:textSize="18sp"
        android:hint="@string/confirm_password"
        android:background="#fff"
        android:layout_below="@id/etNewPassword"
        android:layout_marginTop="20dp"
        android:textColorHint="@color/grey2"
        android:textStyle="bold"/>
    <Button
        android:id="@+id/btnSubmit"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:background="@color/colorPrimaryDark"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_below="@id/etConfirmPassword"
        android:textSize="18sp"
        android:textColor="#fff"
        android:textStyle="bold"
        android:text="@string/submit"/>

</RelativeLayout>